--- a/main.css
+++ b/main.css
@@ -30,7 +30,8 @@ h4 {
 
 h1, h2, h3, h4 {
   display: inline-block;
-  font-weight: bold; }
+  font-family: 'AkiLinesRegular';
+  margin: 10px 0px; }
 
 nav {
   margin: 5px 0px;
@@ -49,3 +50,5 @@ nav {
 #main {
   background-color: #141414;
   padding: 10px; }
+  #main p {
+    margin: 5px 0px; }
