added pics and thumbs; Rakefile work

--- a/index.html.haml
+++ b/index.html.haml
@@ -15,20 +15,8 @@
         %li pics
         %li contact
     #main
-      %h1 Header 1
-      %p here is some content
-      %p here is some content
-      %p here is some content
-      %h2 Header 2
-      %p here is some content
-      %p here is some content
-      %p here is some content
-      %h3 Header 3
-      %p here is some content
-      %p here is some content
-      %h1 Header 1
-      %p here is some content
-      %p here is some content
-      %p here is some content
-      %p here is some content
-
+      #pics
+        <!-- include gallery.html -->
+        <!-- lulzh -->
+  </ul>
+</div>
