--- a/index.html.haml
+++ b/index.html.haml
@@ -4,6 +4,9 @@
     %title Cooling Towers
     %link(rel="stylesheet" type="text/css" href="reset.css")
     %link(rel="stylesheet" type="text/css" href="main.css")
+    %script(src="js/jquery-1.7.1.min.js")
+    %script(src="js/jquery.gallerific.js")
+    %script(src="js/main.js")
   %body
     %header
       %img.banner(src="images/ctbanner-960x200.jpg")
