--- a/index.html.haml
+++ b/index.html.haml
@@ -5,7 +5,8 @@
     %link(rel="stylesheet" type="text/css" href="reset.css")
     %link(rel="stylesheet" type="text/css" href="main.css")
     %script(src="js/jquery-1.7.1.min.js")
-    %script(src="js/jquery.gallerific.js")
+    %script(src="js/jquery.opacityrollover.js")
+    %script(src="js/jquery.galleriffic.js")
     %script(src="js/main.js")
   %body
     %header
@@ -19,7 +20,7 @@
         %li contact
     #main
       #pics
+        %h1 Pics
         <!-- include gallery.html -->
-        <!-- lulzh -->
   </ul>
 </div>
