nav li.selected style, dummy news content

--- a/index.html.haml
+++ b/index.html.haml
@@ -19,8 +19,23 @@
         %li pics
         %li contact
     #main
+      #news
+        .item
+          %h2 Judy ironed her hair
+          %p.date 2012-02-16
+          %p Judy flatironed her hair. Very exciting, very exciting.
+        .item
+          %h2 CT plays Spike Hill this Friday
+          %p.date 2012-02-16
+          %p This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.
+      #shows
+        //%h1 Shows
+      #audio
+        //%h1 Audio
       #pics
-        %h1 Pics
+        //%h1 Pics
         <!-- include gallery.html -->
+      #contact
+        //%h1 Contact
   </ul>
 </div>
