--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4 {
 
 nav {
   margin: 5px 0px;
-  padding: 10px;
+  padding: 0px;
   padding-left: 15px;
   display: block;
   font-family: "AkiLinesRegular", sans-serif;
@@ -44,14 +44,22 @@ nav {
   nav ul {
     list-style-type: none; }
     nav ul li {
-      margin-right: 20px;
-      display: inline-block; }
+      padding: 10px;
+      margin-right: 10px;
+      display: inline-block;
+      color: #ddd; }
+    nav ul li.selected {
+      background-color: rgba(0, 0, 0, 0.25);
+      color: white; }
 
 #main {
   background-color: #141414;
   padding: 10px; }
   #main p {
     margin: 5px 0px; }
+
+#news .item {
+  margin-bottom: 30px; }
 
 #pics div.content {
   /* The display of content is enabled using jQuery so that the slideshow content won't display unless javascript is enabled. */
