--- a/index.html.haml
+++ b/index.html.haml
@@ -28,8 +28,20 @@
           %h2 CT plays Spike Hill this Friday
           %p.date 2012-02-16
           %p This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.
+
       #shows
-        //%h1 Shows
+        .show
+          %h2 Spike Hill (Brooklyn, NY)
+          %h2 Missing Ships, Bonny Bear, Sir Paul McCartney
+          %h2.date Friday, February 17, 2012
+          %p This is some show info.
+          %p Here is more.
+        .show
+          %h2 Magic Room (Allston, MA)
+          %h2 Black Fortress of Four Loko, Spyrm Wyzyrd
+          %h2.date Saturday, March 3, 2012
+          %p With special guest GG Allin and the Murder Junkies
+
       #audio
         //%h1 Audio
       #pics
