--- a/main.css
+++ b/main.css
@@ -29,14 +29,14 @@ h4 {
   font-size: 118%; }
 
 h1, h2, h3, h4 {
-  display: inline-block;
+  display: block;
   font-family: 'AkiLinesRegular';
   margin: 10px 0px; }
 
 nav {
   margin: 5px 0px;
   padding: 0px;
-  padding-left: 15px;
+  padding-left: 10px;
   display: block;
   font-family: "AkiLinesRegular", sans-serif;
   font-size: 40px;
@@ -59,6 +59,9 @@ nav {
     margin: 5px 0px; }
 
 #news .item {
+  margin-bottom: 30px; }
+
+#shows .show {
   margin-bottom: 30px; }
 
 #pics div.content {
