--- a/index.html.haml
+++ b/index.html.haml
@@ -14,6 +14,7 @@
     %nav
       %ul
         %li news
+        %li bio
         %li shows
         %li audio
         %li pics
@@ -28,6 +29,9 @@
           %h2 CT plays Spike Hill this Friday
           %p.date 2012-02-16
           %p This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.
+
+      #bio
+        Cooling Towers bla bla bla
 
       #shows
         .show
