--- a/index.html.haml
+++ b/index.html.haml
@@ -84,5 +84,9 @@
         <!-- include gallery.html -->
       #contact
         //%h1 Contact
-  </ul>
-</div>
+      %br(clear='all')
+
+    %footer
+      copyright 2012 Cooling Towers.
+
+
