--- a/main.css.scss
+++ b/main.css.scss
@@ -12,12 +12,11 @@ html {
 
 body {
   width: $width;
-  height: 100%;
+  min-height: 100%;
   margin: 10px auto 10px auto;
   // background-color: $body_bgcolor;
   font-family: 'Allerta', 'Geneva', 'Tahoma', sans-serif;
   font-size: 16px;
-  line-height: 1.4;
 }
 
 @font-face {
@@ -45,6 +44,12 @@ h1,h2,h3,h4 {
 
 header {
 
+}
+
+footer {
+  text-align: center;
+  font-size: 12px;
+  margin: 10px 0px;
 }
 
 nav {
@@ -77,7 +82,7 @@ nav {
   background-color: $body_bgcolor;
   padding: 10px;
 
-  p { margin: 5px 0px; }
+  p { margin: 5px 0px; line-height: 1.4; }
   img[align=left]  { margin: 10px 10px 10px 0px; }
   img[align=right] { margin: 10px 0px 10px 10px; }
 }
