added bandcamp api stuff

--- a/index.html.haml
+++ b/index.html.haml
@@ -42,7 +42,7 @@
         %p
           With Judy Margo on electric piano, Eric Donahue
           on bass, and Pete Gamache on drums, the band has become the unique sum
-          of its parts; veterans from disparate corners of a diverse musical
+          of its parts: veterans from disparate corners of a diverse musical
           scene.
         %p
           Armed with a slew of guitar hooks and a little black book full
@@ -78,12 +78,18 @@
           %p With special guest GG Allin and the Murder Junkies
 
       #audio
-        //%h1 Audio
+
       #pics
-        //%h1 Pics
         <!-- include gallery.html -->
+
       #contact
-        //%h1 Contact
+        %p
+          %a(target='_blank' href="http://facebook.com/coolingtowersmusic") facebook.com/coolingtowersmusic
+        %p
+          %a(target='_blank' href='http://coolingtowers.bandcamp.com') coolingtowers.bandcamp.com
+
+
+
       %br(clear='all')
 
     %footer
