added looksright images, image mapped fiveheads on the contact page

--- a/index.html.haml
+++ b/index.html.haml
@@ -21,13 +21,37 @@
     #main
       #news
         .item
-          %h2 Judy ironed her hair
-          %p.date 2012-02-16
-          %p Judy flatironed her hair. Very exciting, very exciting.
+          %h2 Tonight! CT w/ Black Fortress of Opium
+          %p.date 2012-03-03
+          %p
+            Tonight at the Magic Room in Allston, Black Fortress of Opium plays
+            a record release show for their new full-length "Stratospherical"!
+            Backup handily provided by Cooling Towers, Brian Carpenter + the
+            Confessions, DJ Damian Gregory, and our own DJ Commodore Vic.
+
         .item
-          %h2 CT plays Spike Hill this Friday
-          %p.date 2012-02-16
-          %p This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.
+          %h2 Booked with Plushgun on 3/17
+          %p.date 2012-02-22
+          %p
+            Awesome! Picked up a gig with the fabulous
+            %a(href='http://plushgun.com') Plushgun
+            in mid-March.  We'll be playing the Middle East Upstairs. Get psyched!
+
+        .item
+          %h2 Last-minute Show at Radio
+          %p.date 2012-02-02
+          %p
+            Ultra-last-minute! Cooling Towers is pinch-hitting for Camden tomorrow
+            night, Friday 2/3 at Radio in Somerville, with Black Helicopter and
+            13 Billion Years.  We're happy to see some new faces.
+            But old ones, come on down!
+
+        .item
+          %h2 Brooklyn and Brooklyn
+          %p.date 2012-02-01
+          %p
+            Cooling Towers is hitting Brooklyn twice this month! 2/4 at The Gutter
+            with Lord Classic, and 2/17 at Spike Hill with Missing Ships.
 
       #bio
         %a(href='images/press/201202-coolingtowers-2400x1350.jpg' target='_blank')
@@ -59,34 +83,50 @@
       #shows
         .show
           %h2
-            Spike Hill (Brooklyn, NY)
-            %br
-            Missing Ships, Bonny Bear, Sir Paul McCartney
-            %br
-            .date Friday, February 17, 2012
-          %p This is some show info.
-          %p Here is more.
-        .show
-          %h2
             Magic Room (Allston, MA)
             %br
-            Black Fortress of Four Loko, Spyrm Wyzyrd
+            Black Fortress of Opium, Brian Carpenter + The Confessions
             %br
             .date Saturday, March 3, 2012
-          %p With special guest GG Allin and the Murder Junkies
+          %p
+            BFOO record release show. With DJ Damian Gregory and DJ Commodore Vic.
+            %a(href="https://www.facebook.com/events/158530350913633/") (facebook)
+
+        .show
+          %h2
+            Middle East Upstairs (Cambridge, MA)
+            %br
+            Plushgun, Endless Wave
+            %br
+            .date Saturday, March 17, 2012
+          %p
+            %a(href="https://www.facebook.com/events/199073196867494/") (facebook)
+
+        %img(src='images/ctlooksright-940x188.jpg')
 
       #audio
-        <!-- populated by javascript -->
+        #tracks <!-- populated by javascript -->
+        %img(src='images/ctlooksmostlyright-940x188.jpg')
+
       #pics
         <!-- include gallery.html -->
 
       #contact
         %p
+          %a(target="_blank" href="mailto:contact@coolingtowers.us") contact@coolingtowers.us
+        %p
           %a(target='_blank' href="http://facebook.com/coolingtowersmusic") facebook.com/coolingtowersmusic
         %p
           %a(target='_blank' href='http://coolingtowers.bandcamp.com') coolingtowers.bandcamp.com
+        %br
+        %img(src='images/press/201202-fiveheads-940x188.jpg' usemap="#fiveheadsmap")
+        %map(name='fiveheadsmap')
+          %area(shape="rect" coords='0,0,188,188' href='mailto:ronan@coolingtowers.us')
+          %area(shape="rect" coords='188,0,376,188' href='mailto:judy@coolingtowers.us')
+          %area(shape="rect" coords='376,0,564,188' href='mailto:adam@coolingtowers.us')
+          %area(shape="rect" coords='564,0,752,188' href='mailto:eric@coolingtowers.us')
+          %area(shape="rect" coords='752,0,940,188' href='mailto:pete@coolingtowers.us')
 
-      %br(clear='all')
 
     %footer
       copyright 2012 Cooling Towers.
