--- a/main.css.scss
+++ b/main.css.scss
@@ -89,7 +89,7 @@ nav {
 #main {
   background-color: $body_bgcolor;
   padding: 10px;
-
+  padding-bottom: 20px;
   p { margin: 5px 0px; line-height: 1.4; }
   img[align=left]  { margin: 10px 10px 10px 0px; }
   img[align=right] { margin: 10px 0px 10px 10px; }
