--- a/main.css
+++ b/main.css
@@ -70,7 +70,8 @@ nav {
 
 #main {
   background-color: #141414;
-  padding: 10px; }
+  padding: 10px;
+  padding-bottom: 20px; }
   #main p {
     margin: 5px 0px;
     line-height: 1.4; }
