added github link to index source

--- a/index.html.haml
+++ b/index.html.haml
@@ -1,5 +1,6 @@
 !!! 5
 %html
+  <!-- site code lives at: https://github.com/gamache/coolingtowers -->
   %head
     %title Cooling Towers
     %link(rel="stylesheet" type="text/css" href="reset.css")
