added reverbnation link

--- a/index.html.haml
+++ b/index.html.haml
@@ -120,6 +120,8 @@
           %a(target='_blank' href="http://facebook.com/coolingtowersmusic") facebook.com/coolingtowersmusic
         %p
           %a(target='_blank' href='http://coolingtowers.bandcamp.com') coolingtowers.bandcamp.com
+        %p
+          %a(target='_blank' href='http://www.reverbnation.com/coolingtowers') reverbnation.com/coolingtowers
         %br
         %img(src='images/press/201202-fiveheads-940x188.jpg' usemap="#fiveheadsmap")
         %map(name='fiveheadsmap')
