--- a/index.html.haml
+++ b/index.html.haml
@@ -64,7 +64,7 @@
           praise and attention for their vibrant studio recordings and
           boisterous live shows.
         %p
-          With Judy Margo on electric piano, Eric Donahue
+          With Judy Margo on electric piano, Eric Donohue
           on bass, and Pete Gamache on drums, the band has become the unique sum
           of its parts: veterans from disparate corners of a diverse musical
           scene.
@@ -83,6 +83,31 @@
           %img(src='images/press/201202-fiveheads-940x188.jpg')
 
       #shows
+
+        .show
+          %h2
+            TT the Bear's Place (Cambridge, MA)
+            %br
+            Rock 'N' Roll Rumble Night 1 w/ Endless Wave, The Rationales,
+            The Grownup Noise
+            %br
+            .date Sunday, April 1, 2012
+          %p
+            We're headlining the first night of the first round in the
+            %a(href='http://wzlx.radio.com/rockandrollrumble/') Rock 'N' Roll Rumble!
+            On at 11:15pm, sharp like tack.
+            %a(href='https://www.facebook.com/events/388249617869016/') (facebook)
+
+        .show
+          %h2
+            Middle East Upstairs (Cambridge, MA)
+            %br
+            Plushgun, Endless Wave
+            %br
+            .date Saturday, March 18, 2012
+          %p
+            %a(href='https://www.facebook.com/events/199073196867494/') (facebook)
+
         .show
           %h2
             Magic Room (Allston, MA)
@@ -93,16 +118,6 @@
           %p
             BFOO record release show. With DJ Damian Gregory and DJ Commodore Vic.
             %a(href="https://www.facebook.com/events/158530350913633/") (facebook)
-
-        .show
-          %h2
-            Middle East Upstairs (Cambridge, MA)
-            %br
-            Plushgun, Endless Wave
-            %br
-            .date Saturday, March 17, 2012
-          %p
-            %a(href="https://www.facebook.com/events/199073196867494/") (facebook)
 
         %img(src='images/ctlooksright-940x188.jpg')
 
