--- a/index.html.haml
+++ b/index.html.haml
@@ -83,6 +83,13 @@
           %img(src='images/press/201202-fiveheads-940x188.jpg')
 
       #shows
+        .show
+          %h2
+            TT the Bear's Place (Cambridge, MA)
+            %br
+            Cooling Towers, Blackboard Nails, All Echoes Answer
+            %br
+            .date Friday, May 4, 2012
 
         .show
           %h2
