added bit about rumble on news page

--- a/index.html.haml
+++ b/index.html.haml
@@ -23,6 +23,14 @@
     #main
       #news
         .item
+          %h2 Playing the Rock 'N' Roll Rumble Night 1, Sunday, April 1
+          %p.date 2012-03-24
+          %p
+            Cooling Towers is excited to play in the
+            %a(href='http://rockandrollrumble.com') Rumble
+            this year!  We headline night 1, Sunday April 1, at TT's.
+
+        .item
           %h2 Tonight! CT w/ Black Fortress of Opium
           %p.date 2012-03-03
           %p
