added Radio show, 2012-05-26

--- a/index.html.haml
+++ b/index.html.haml
@@ -23,6 +23,17 @@
     #main
       #news
         .item
+          %h2 CT w/ Age Rings (EP Release) at Radio, 5/26
+          %p.date 2012-05-08
+          %p
+            %a(href='http://www.midriffrecords.com/') Midriff Records
+            presents the Age Rings' "AM/PM" EP release show, with
+            Cooling Towers, Eldridge Rodriguez, and Sarah Borges +
+            Greg Lyon.  DJ sets by Celebrity Handjob.
+            %a(href='https://www.facebook.com/events/160873064039260/')
+              (facebook event)
+
+        .item
           %h2 Playing the Rock 'N' Roll Rumble Night 1, Sunday, April 1
           %p.date 2012-03-24
           %p
@@ -91,6 +102,15 @@
           %img(src='images/press/201202-fiveheads-940x188.jpg')
 
       #shows
+        .show
+          %h2
+            Radio (Somerville, MA)
+            %br
+            Cooling Towers, Age Rings (EP Release), Eldridge Rodriguez,
+            Sarah Borges + Greg Lyon, Celebrity Handjob (DJ)
+            %br
+            .date Saturday, May 26, 2012
+
         .show
           %h2
             TT the Bear's Place (Cambridge, MA)
