added two shows, hid Shows section cause it is kind of useless right now

--- a/index.html.haml
+++ b/index.html.haml
@@ -1,6 +1,6 @@
 !!! 5
 %html
-  <!-- site code lives at: https://github.com/gamache/coolingtowers -->
+  <!-- hello, visitor! site code lives at: https://github.com/gamache/coolingtowers -->
   %head
     %title Cooling Towers
     %link(rel="stylesheet" type="text/css" href="reset.css")
@@ -15,7 +15,7 @@
       %ul
         %li.news news
         %li.bio bio
-        %li.shows shows
+        // %li.shows shows
         %li.audio audio
         %li.pics pics
         %li.contact contact
@@ -23,22 +23,39 @@
     #main
       #news
         .item
+          %h2 Lord Classic, Cooling Towers, and more in Brattleboro, VT on 7/14
+          %p.date 2012-06-21
+          %p
+            Hey Vermont! Brooklyn and Boston are ganging up on you for an afternoon
+            show at the Stone Church in Brattleboro on Saturday, July 14.
+            Beatings commence at 3pm.
+            (<a href='images/flyers/20120714-brattleboro.jpg' target='_blank'>flyer</a>)
+
+        .item
+          %h2 Cooling Towers, Milling Gowns, Eksi Ekso, Pressure System at Cantab, 6/29
+          %p.date 2012-06-20
+          %p
+            Friday, June 29 at the Cantab Lounge downstairs in Central Sq,
+            Cambridge, MA. Milling Gowns are on first and we're on second,
+            so come early!
+            (<a href='https://www.facebook.com/events/365309943532537/' target='_blank'>facebook event</a>)
+
+        .item
           %h2 CT w/ Age Rings (EP Release) at Radio, 5/26
           %p.date 2012-05-08
           %p
-            %a(href='http://www.midriffrecords.com/') Midriff Records
+            %a(href='http://www.midriffrecords.com/' target='_blank') Midriff Records
             presents the Age Rings' "AM/PM" EP release show, with
             Cooling Towers, Eldridge Rodriguez, and Sarah Borges +
             Greg Lyon.  DJ sets by Celebrity Handjob.
-            %a(href='https://www.facebook.com/events/160873064039260/')
-              (facebook event)
+            (<a href='https://www.facebook.com/events/160873064039260/' target='_blank'>facebook event</a>)
 
         .item
           %h2 Playing the Rock 'N' Roll Rumble Night 1, Sunday, April 1
           %p.date 2012-03-24
           %p
             Cooling Towers is excited to play in the
-            %a(href='http://rockandrollrumble.com') Rumble
+            %a(href='http://rockandrollrumble.com' target='_blank') Rumble
             this year!  We headline night 1, Sunday April 1, at TT's.
 
         .item
@@ -55,7 +72,7 @@
           %p.date 2012-02-22
           %p
             Awesome! Picked up a gig with the fabulous
-            %a(href='http://plushgun.com') Plushgun
+            %a(href='http://plushgun.com' target='_blank') Plushgun
             in mid-March.  We'll be playing the Middle East Upstairs. Get psyched!
 
         .item
@@ -104,12 +121,22 @@
       #shows
         .show
           %h2
+            Cantab Lounge (Cambridge, MA)
+            %br
+            Milling Gowns, Cooling Towers, Eksi Ekso, Pressure System
+            %br
+            .date Friday, June 29, 2012
+            %p
+
+        .show
+          %h2
             Radio (Somerville, MA)
             %br
             Cooling Towers, Age Rings (EP Release), Eldridge Rodriguez,
             Sarah Borges + Greg Lyon, Celebrity Handjob (DJ)
             %br
             .date Saturday, May 26, 2012
+            %p
 
         .show
           %h2
@@ -118,6 +145,7 @@
             Cooling Towers, Blackboard Nails, All Echoes Answer
             %br
             .date Friday, May 4, 2012
+            %p
 
         .show
           %h2
@@ -129,9 +157,9 @@
             .date Sunday, April 1, 2012
           %p
             We're headlining the first night of the first round in the
-            %a(href='http://wzlx.radio.com/rockandrollrumble/') Rock 'N' Roll Rumble!
+            %a(href='http://wzlx.radio.com/rockandrollrumble/' target='_blank') Rock 'N' Roll Rumble!
             On at 11:15pm, sharp like tack.
-            %a(href='https://www.facebook.com/events/388249617869016/') (facebook)
+            %a(href='https://www.facebook.com/events/388249617869016/' target='_blank') (facebook)
 
         .show
           %h2
@@ -141,7 +169,7 @@
             %br
             .date Saturday, March 18, 2012
           %p
-            %a(href='https://www.facebook.com/events/199073196867494/') (facebook)
+            %a(href='https://www.facebook.com/events/199073196867494/' target='_blank') (facebook)
 
         .show
           %h2
@@ -152,7 +180,7 @@
             .date Saturday, March 3, 2012
           %p
             BFOO record release show. With DJ Damian Gregory and DJ Commodore Vic.
-            %a(href="https://www.facebook.com/events/158530350913633/") (facebook)
+            %a(href="https://www.facebook.com/events/158530350913633/" target='_blank') (facebook)
 
         %img(src='images/ctlooksright-940x188.jpg')
 
