--- a/main.css.scss
+++ b/main.css.scss
@@ -1,8 +1,14 @@
 $width: 960px;
-$fgcolor: #ddd;
-$html_bgcolor: rgb(0,0,0); // #000;
-$body_bgcolor: rgb(20,20,20);
 
+$fgcolor: #000; //#ddd;
+$html_bgcolor: #000; //rgb(0,0,0); // #000;
+$body_bgcolor: #f8f8f8; //rgb(20,20,20);
+
+/*
+$fgcolor: #000; //#ddd;
+$html_bgcolor: #fff; //rgb(0,0,0); // #000;
+$body_bgcolor: #fff; //rgb(20,20,20);
+*/
 // * { border: 1px solid red; }
 
 html {
@@ -48,6 +54,7 @@ header {
   width: 960px;
   height: 110px;
   h1.logo {
+    color: $body_bgcolor;
     font-family: 'AkiLinesRegular';
     font-weight: normal;
     font-size: 80px;
@@ -91,6 +98,7 @@ nav {
 }
 
 #main {
+  position: relative;
   background-color: $body_bgcolor;
   padding: 10px;
   padding-bottom: 20px;
@@ -99,6 +107,7 @@ nav {
   img[align=right] { margin: 10px 0px 10px 10px; }
   a { color: $fgcolor; }
   //a,a:active,a:visited { text-decoration: none; }
+
 }
 
 #bio {
@@ -108,6 +117,16 @@ nav {
 #news {
   .item {
     margin-bottom: 30px;
+  }
+  //* { border: 1px solid red;}
+
+  #content {
+    width: 600px;
+  }
+
+  #sidebar {
+    width: 320px;
+    float: right;
   }
 }
 
